chore: update MSF integrated project snapshot